SK-1594: fix button overlapping dropdown

--- a/src/Components/ClaimW3Name/ClaimW3Name.module.css
+++ b/src/Components/ClaimW3Name/ClaimW3Name.module.css
@@ -129,6 +129,7 @@
 
 .select {
   position: absolute;
+  z-index: 1;
   min-height: 28px;
   max-width: 320px;
   width: 80%;
